--- a/.github/actions/create-iam-role.yml
+++ b/.github/actions/create-iam-role.yml
@@ -47,12 +47,16 @@ jobs:
       run: |
         mkdir -p tfvars
         cat <<EOF > tfvars/github_action.tfvars
-        aws_access_key     = "${{ github.event.inputs.aws_access_key }}"
-        aws_secret_key     = "${{ github.event.inputs.aws_secret_key }}"
-        region             = "${{ github.event.inputs.region }}"
-        assume_role_policy = "${{ github.event.inputs.assume_role_policy }}"
-        iam_role_name      = "${{ github.event.inputs.iam_role_name }}"
-        EOF
+    aws_access_key     = "${{ github.event.inputs.aws_access_key }}"
+    aws_secret_key     = "${{ github.event.inputs.aws_secret_key }}"
+    region             = "${{ github.event.inputs.region }}"
+    assume_role_policy = "${{ github.event.inputs.assume_role_policy }}"
+    iam_role_name      = "${{ github.event.inputs.iam_role_name }}"
+    EOF
+
+    - name: Debug .tfvars contents
+      working-directory: terraform/iam_src
+      run: cat tfvars/github_action.tfvars
 
     - name: Init Terraform
       working-directory: terraform/iam_src
