--- a/.github/workflows/create-iam-role.yml
+++ b/.github/workflows/create-iam-role.yml
@@ -45,6 +45,7 @@ jobs:
     - name: Create tfvars file from inputs
       working-directory: terraform/iam_src
       run: |
+        mkdir -p tfvars
         cat <<EOF > tfvars/github_action.tfvars
         aws_access_key     = "${{ github.event.inputs.aws_access_key }}"
         aws_secret_key     = "${{ github.event.inputs.aws_secret_key }}"
@@ -52,6 +53,12 @@ jobs:
         assume_role_policy = "${{ github.event.inputs.assume_role_policy }}"
         iam_role_name      = "${{ github.event.inputs.iam_role_name }}"
         EOF
+
+    - name: Debug tfvars file
+      working-directory: terraform/iam_src
+      run: |
+        echo "Contents of github_action.tfvars:"
+        cat tfvars/github_action.tfvars
 
     - name: Init Terraform
       working-directory: terraform/iam_src
@@ -63,8 +70,8 @@ jobs:
 
     - name: Plan
       working-directory: terraform/iam_src
-      run: terraform plan -var-file=terraform/iam_src/tfvars/github_action.tfvars
+      run: terraform plan -var-file=tfvars/github_action.tfvars
 
     # - name: Apply
-      # working-directory: terraform/iam_src
-    #   run: terraform apply -var-file=terraform/iam_src/tfvars/github_action.tfvars -auto-approve
+    #   working-directory: terraform/iam_src
+    #   run: terraform apply -var-file=tfvars/github_action.tfvars -auto-approve
