--- a/.github/workflows/create-iam-role.yml
+++ b/.github/workflows/create-iam-role.yml
@@ -95,7 +95,7 @@ jobs:
       working-directory: terraform/iam_src
       run: terraform apply -var-file=tfvars/github_action.tfvars -auto-approve
 
-    - name: Apply
+    - name: verify IAM role creation
       working-directory: terraform/iam_src
       run: aws --endpoint-url=http://localhost:4566 iam list-roles --region us-east-1
 
